tests/sksl/errors/MissingWorkgroupSize.glsl
### Compilation failed:

error: compute programs must specify a workgroup size
1 error
